# dist-register

./: .envrc  .gitignore  .rgignore  Cargo.toml  TODO  justfile  trace
abd/: Cargo.toml
abd-example/: Cargo.toml
abd-example/src/: cli.rs  concurrent.rs  error.rs  invariant.rs  main.rs  print.rs  trace.rs
abd/src/: channel.rs  main.rs  proto.rs  timestamp.rs
abd/src/client/: error.rs  mod.rs  net_axioms.rs  net_invs.rs  utils.rs
abd/src/client/net_invs/: mod.rs  read.rs  write.rs  write_read_phase.rs  write_write_phase.rs
abd/src/invariants/: Proof.md  committed_to.rs  mod.rs  quorum.rs  requests.rs
abd/src/invariants/lin_queue/: completed.rs  maybe_lin.rs  mod.rs  pending.rs
abd/src/proto/: get.rs  get_timestamp.rs  mod.rs  request.rs  response.rs  write.rs
abd/src/resource/: monotonic_timestamp.rs
abd/src/server/: Proof.md  mod.rs  register.rs
echo/: Cargo.toml
echo-example/: Cargo.toml
echo-example/src/: cli.rs  error.rs  invariant.rs  main.rs
echo-trivial/: Cargo.toml
echo-trivial/src/: lib.rs
echo/src/: Proof.md  channel.rs  lib.rs
echo/src/client/: error.rs  mod.rs
echo/src/invariants/: mod.rs  requests.rs
echo/src/proto/: echo.rs  mod.rs  request.rs  response.rs
echo/src/server/: mod.rs
scripts/: print_profile_stats.sh  print_verify_times.sh  profile_proof.sh
specs/: Cargo.toml
specs/src/: abd.rs  echo.rs  lib.rs  register.rs
src/: main.rs  proto.rs
src/abd/: channel.rs  client.rs  error.rs  min.rs  mod.rs  proto.rs  server.rs  timestamp.rs
src/abd/client/: Proof.md  client_id_map.rs  error.rs  history.rs  invariants.rs  linearization.rs  linearizers.rs  logatom.rs  mod.rs  net_axioms.rs  net_invs.rs  timestamp.rs  utils.rs
src/abd/invariants/: client_id_map.rs  client_token.rs  committed_to.rs  lin_queue.rs  logatom.rs  mod.rs  quorum.rs  server_map.rs
src/abd/invariants/lin_queue/: completed.rs  maybe_lin.rs  mod.rs  pending.rs  token.rs
src/abd/resource/: Proof.md  ghost_set.rs  log.rs  mod.rs  monotonic_timestamp.rs  register.rs
src/abd/server/: mod.rs  register.rs
src/network/: broadcast_pool.rs  connection_pool.rs  error.rs  mod.rs  modelled.rs  replies.rs  request_context.rs
src/verdist/: mod.rs  proto.rs
src/verdist/network/: channel.rs  error.rs  modelled.rs
src/verdist/pool/: broadcast_pool.rs  connection_pool.rs
src/verdist/quorum/: mod.rs
src/verdist/request/: mod.rs  request_context.rs
src/verdist/rpc/: mod.rs  proto.rs  replies.rs  request_context.rs  rpc_channel.rs
timing_tracker/: 0001_2025_12_24_22_11_08.json  0002_2025_12_24_23_29_10.json  0003_2025_12_25_21_49_39.json  0004_2025_12_26_07_27_30.json  0005_2025_12_26_07_52_09.json  0006_2025_12_26_09_56_08.json  summary.md
verdist/: Cargo.toml
verdist/src/network/: channel.rs  error.rs  mod.rs  modelled.rs
verdist/src/pool/: broadcast_pool.rs  connection_pool.rs  mod.rs
verdist/src/rpc/: proto.rs  replies.rs  request_context.rs  rpc_channel.rs
vlib/: Cargo.toml
vlib/src/: lib.rs  map.rs  print.rs  set.rs
vlib/src/monotonic/: map.rs  set.rs
