[package]
name = "abd-example"

edition = { workspace = true }
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
clap = { workspace = true }

abd = { path = "../abd" }
specs = { path = "../specs" }
verdist = { path = "../verdist" }
vlib = { workspace = true }
vstd = { workspace = true }

[lints]
workspace = true

[package.metadata.verus]
verify = true
