[package]
name = "echo-example"

edition = { workspace = true }
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
clap = { workspace = true }
rand = { workspace = true }

echo = { workspace = true }
specs = { workspace = true }
verdist = { workspace = true }
vlib = { workspace = true }
vstd = { workspace = true }

[lints]
workspace = true

[package.metadata.verus]
verify = true
