[package]
name = "echo-trivial"

edition = { workspace = true }
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
vlib = { workspace = true }
vstd = { workspace = true }
verdist = { path = "../verdist" }
specs = { path = "../specs" }

[lints]
workspace = true

[package.metadata.verus]
verify = true
