[package]
name = "verdist"

edition = { workspace = true }
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
crossbeam-channel = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }

vlib = { workspace = true }
vstd = { workspace = true }

[lints]
workspace = true

[package.metadata.verus]
verify = true
