[package]
name = "vlib"

edition = { workspace = true }
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
vstd = { workspace = true }

[lints]
workspace = true

[package.metadata.verus]
verify = true
